--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <!-- My CSS -->
     <link rel="stylesheet" href="style.css" />
-    <title>My Website</title>
+    <title>My Website | Dylan</title>
   </head>
   <body>
     <!-- Navbar -->
