--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
               <img src="img/arduino.jpg" class="card-img-top" alt="..." />
               <div class="card-body">
                 <h5 class="card-title">Robotics</h5>
-                <p class="card-text">I will build a tools from technologgy</p>
+                <p class="card-text">I will build tools</p>
                 <a href="#" class="btn btn-primary tombol">View more</a>
               </div>
             </div>
