--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <div class="row row-cols-1 row-cols-sm-2 row-cols-lg-3 g-4 justify-content-center">
           <div class="col mb-2">
             <div class="card" style="max-width: 25rem">
-              <img src="img/programming.jpg" class="card-img-top" alt="..." />
+              <img src="img/cooming soon.jpg" class="card-img-top" alt="..." />
               <div class="card-body">
                 <h5 class="card-title">Web Development</h5>
                 <p class="card-text">I will create a website for you</p>
@@ -109,7 +109,7 @@
           </div>
           <div class="col mb-2">
             <div class="card" style="max-width: 25rem">
-              <img src="img/arduino.jpg" class="card-img-top" alt="..." />
+              <img src="img/cooming soon.jpg" class="card-img-top" alt="..." />
               <div class="card-body">
                 <h5 class="card-title">Robotics</h5>
                 <p class="card-text">I will build tools</p>
@@ -126,40 +126,12 @@
     <section id="Blog">
       <h2 class="h2 text-center mb-5">Blog</h2>
       <div class="container">
-        <div class="row row-cols-1 row-cols-lg-2 g-4">
-          <div class="col">
+        <div class="row row-cols-1 justify-content-center">
+          <div class="col-12 col-lg-6">
             <div class="card">
-              <img src="img/pemandangan.jpg" class="card-img-top" alt="..." />
+              <img src="img/cooming soon.jpg" class="card-img-top" alt="..." />
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-              </div>
-            </div>
-          </div>
-          <div class="col">
-            <div class="card">
-              <img src="img/pemandangan.jpg" class="card-img-top" alt="..." />
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-              </div>
-            </div>
-          </div>
-          <div class="col">
-            <div class="card">
-              <img src="img/pemandangan.jpg" class="card-img-top" alt="..." />
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
-              </div>
-            </div>
-          </div>
-          <div class="col">
-            <div class="card">
-              <img src="img/pemandangan.jpg" class="card-img-top" alt="..." />
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+                <h5 class="card-title">Coming Soon</h5>
               </div>
             </div>
           </div>
