menambah halaman html

--- a/index.html
+++ b/index.html
@@ -11,9 +11,6 @@
     <!-- Iconscout -->
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css" />
 
-    <!-- AOS library -->
-    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-
     <!-- My CSS -->
     <link rel="stylesheet" href="style.css" />
     <title>My Website | Dylan</title>
@@ -103,7 +100,7 @@
               <div class="card-body">
                 <h5 class="card-title">Video Editing</h5>
                 <p class="card-text">I will edit your videos</p>
-                <a href="#" class="btn btn-primary tombol">View more</a>
+                <a href="Page-2/porto-editing.html" class="btn btn-primary tombol">View more</a>
               </div>
             </div>
           </div>
