input link in dropdown

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
             <a class="link-footer" href="#Contact">Contact</a>
             <a class="link-footer dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Portfolio</a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" href="#">Video Editing</a></li>
+              <li><a class="dropdown-item" href="Page-2/porto-editing.html">Video Editing</a></li>
             </ul>
             <a class="link-footer" href="#Services">Services</a>
           </div>
